--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -280,8 +280,6 @@
     justify-content: center;
     align-items: center;
     transition: all 0.5s ease;
-    opacity: 0;
-    pointer-events: none;
 }
 
 .init-data-modal {
@@ -383,7 +381,7 @@
     position: relative;
 
     &:focus-within label {
-        color: $main-violet;
+        color: $main-violet-soft;
     }
 
     label {
